Add Railway deployment configuration and fix PostgreSQL compatibility

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip", "postgresql"]
+nixPkgs = ["python311", "python311Packages.pip", "postgresql", "libpq"]
 
 [phases.install]
 cmds = ["pip install --upgrade pip", "pip install -r requirements.txt"]
@@ -8,7 +8,7 @@ cmds = ["pip install --upgrade pip", "pip install -r requirements.txt"]
 cmds = ["python manage.py collectstatic --noinput"]
 
 [start]
-cmd = "gunicorn myproject.wsgi --bind 0.0.0.0:$PORT --workers 2 --timeout 120"
+cmd = "python manage.py migrate && python manage.py collectstatic --noinput && gunicorn myproject.wsgi --bind 0.0.0.0:$PORT --workers 2 --timeout 120"
 
 [variables]
 PORT = "8000"
