Temporarily use SQLite to fix deployment - remove PostgreSQL dependencies

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,14 +10,12 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-        postgresql-client \
         build-essential \
-        libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements-sqlite.txt .
+RUN pip install --no-cache-dir -r requirements-sqlite.txt
 
 # Copy project
 COPY . .
