Fix CORS issue: Update frontend to use correct Railway backend URL

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,6 +1,6 @@
 # Production environment variables for deployment
-VITE_API_BASE_URL=https://entstores.onrender.com/api/payments
-VITE_SHOP_API_BASE_URL=https://entstores.onrender.com/api/shop
-VITE_MEDIA_BASE_URL=https://entstores.onrender.com
+VITE_API_BASE_URL=https://entstores-production.up.railway.app/api/payments
+VITE_SHOP_API_BASE_URL=https://entstores-production.up.railway.app/api/shop
+VITE_MEDIA_BASE_URL=https://entstores-production.up.railway.app
 VITE_PUBLIC_BUILDER_KEY=__BUILDER_PUBLIC_KEY__
 PING_MESSAGE="ping pong"
